@startuml

title __ENGINE's Class Diagram__\n

  namespace  {
    class Engine {
        - enginePower : int
        + Engine()
        + getEnginePower()
        # speedFactor()
    }
  }
  

  namespace  {
    class TrimEngine {
        ~ trimFactor : double
        + TrimEngine()
        # speedFactor()
    }
  }
  

  namespace  {
    class TurboEngine {
        + turboOn : boolean
        + TurboEngine()
        + setTurboOff()
        + setTurboOn()
        # speedFactor()
    }
  }
  

  TrimEngine -up-|> Engine
  TurboEngine -up-|> Engine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
